--- a/archives/toutiao-search/2023-11-03.md
+++ b/archives/toutiao-search/2023-11-03.md
@@ -1,55 +1,74 @@
 # 2023-11-03
 
-共 187 条
+共 199 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Nov 03 2023 16:00:45 GMT+0800 (China Standard Time) -->
-1. [CBS记者：文班是有史以来最强新秀](https://so.toutiao.com/search?keyword=CBS记者：文班是有史以来最强新秀)
-1. [支原体肺炎爆发和新冠有关系吗](https://so.toutiao.com/search?keyword=支原体肺炎爆发和新冠有关系吗)
-1. [我国应对气候变化取得积极进展](https://so.toutiao.com/search?keyword=我国应对气候变化取得积极进展)
-1. [成都男子地铁被诬告偷拍案开庭](https://so.toutiao.com/search?keyword=成都男子地铁被诬告偷拍案开庭)
-1. [男子在药店和街头暴打女子](https://so.toutiao.com/search?keyword=男子在药店和街头暴打女子)
+<!-- 最后更新时间 Fri Nov 03 2023 17:00:55 GMT+0800 (China Standard Time) -->
+1. [劳荣枝案死刑复核进展如何](https://so.toutiao.com/search?keyword=劳荣枝案死刑复核进展如何)
+1. [医院回应新生儿后脑勺被护士烫伤](https://so.toutiao.com/search?keyword=医院回应新生儿后脑勺被护士烫伤)
+1. [二十连丰！](https://so.toutiao.com/search?keyword=二十连丰！)
+1. [马斯克：AI比最聪明的人聪明得多](https://so.toutiao.com/search?keyword=马斯克：AI比最聪明的人聪明得多)
+1. [淄博36条道路实行“落叶缓扫”](https://so.toutiao.com/search?keyword=淄博36条道路实行“落叶缓扫”)
+1. [电影《我本是高山》发特辑](https://so.toutiao.com/search?keyword=电影《我本是高山》发特辑)
+1. [联合国越来越不起作用了吗](https://so.toutiao.com/search?keyword=联合国越来越不起作用了吗)
+1. [杨坤演出结束后被打？假的](https://so.toutiao.com/search?keyword=杨坤演出结束后被打？假的)
 1. [天津助学金事件三大争议点](https://so.toutiao.com/search?keyword=天津助学金事件三大争议点)
-1. [赖岳谦谈菲律宾军舰非法闯入黄岩岛](https://so.toutiao.com/search?keyword=赖岳谦谈菲律宾军舰非法闯入黄岩岛)
-1. [21岁女孩因吸食依托咪酯主动自首](https://so.toutiao.com/search?keyword=21岁女孩因吸食依托咪酯主动自首)
+1. [警方辟谣长沙岳麓山有人被拐去缅甸](https://so.toutiao.com/search?keyword=警方辟谣长沙岳麓山有人被拐去缅甸)
+1. [美穆斯林选民：不会再把票投给拜登](https://so.toutiao.com/search?keyword=美穆斯林选民：不会再把票投给拜登)
+1. [美以讨论以色列在加沙最新行动情况](https://so.toutiao.com/search?keyword=美以讨论以色列在加沙最新行动情况)
+1. [黎真主党称同时打击以军19个阵地](https://so.toutiao.com/search?keyword=黎真主党称同时打击以军19个阵地)
+1. [美媒：拜登等人私下警告以色列](https://so.toutiao.com/search?keyword=美媒：拜登等人私下警告以色列)
+1. [也门胡塞武装发布向以发射导弹画面](https://so.toutiao.com/search?keyword=也门胡塞武装发布向以发射导弹画面)
+1. [黎真主党50名成员在黎以冲突中死亡](https://so.toutiao.com/search?keyword=黎真主党50名成员在黎以冲突中死亡)
+1. [德国副总理：赞扬哈马斯属犯罪行为](https://so.toutiao.com/search?keyword=德国副总理：赞扬哈马斯属犯罪行为)
+1. [海清和张桂梅校长的首次见面](https://so.toutiao.com/search?keyword=海清和张桂梅校长的首次见面)
+1. [以方称一支伊朗民兵抵达黎巴嫩南部](https://so.toutiao.com/search?keyword=以方称一支伊朗民兵抵达黎巴嫩南部)
+1. [对话因高彩礼退婚辞职旅行当事人](https://so.toutiao.com/search?keyword=对话因高彩礼退婚辞职旅行当事人)
+1. [联合国机构呼吁巴以立即实现停火](https://so.toutiao.com/search?keyword=联合国机构呼吁巴以立即实现停火)
+1. [揭秘巴以冲突背后的激烈斗争](https://so.toutiao.com/search?keyword=揭秘巴以冲突背后的激烈斗争)
+1. [多地进入呼吸道传染病高发季节](https://so.toutiao.com/search?keyword=多地进入呼吸道传染病高发季节)
+1. [中央气象台：北方正受冷空气影响](https://so.toutiao.com/search?keyword=中央气象台：北方正受冷空气影响)
+1. [专家：巴以冲突给中东经济蒙上阴影](https://so.toutiao.com/search?keyword=专家：巴以冲突给中东经济蒙上阴影)
 1. [警方通报男子当街持械袭击女子](https://so.toutiao.com/search?keyword=警方通报男子当街持械袭击女子)
+1. [以南部遭火箭弹袭击未造成人员伤亡](https://so.toutiao.com/search?keyword=以南部遭火箭弹袭击未造成人员伤亡)
+1. [知名记者曝以军对加沙战术](https://so.toutiao.com/search?keyword=知名记者曝以军对加沙战术)
+1. [以军与巴勒斯坦民众冲突致多人死亡](https://so.toutiao.com/search?keyword=以军与巴勒斯坦民众冲突致多人死亡)
+1. [74名拥有双重国籍美国人从加沙撤离](https://so.toutiao.com/search?keyword=74名拥有双重国籍美国人从加沙撤离)
+1. [以军称地面部队已包围加沙城](https://so.toutiao.com/search?keyword=以军称地面部队已包围加沙城)
+1. [巴以冲突致237起针对医疗系统袭击](https://so.toutiao.com/search?keyword=巴以冲突致237起针对医疗系统袭击)
+1. [成都男子地铁被诬告偷拍案开庭](https://so.toutiao.com/search?keyword=成都男子地铁被诬告偷拍案开庭)
+1. [部分外国人获准离开加沙](https://so.toutiao.com/search?keyword=部分外国人获准离开加沙)
+1. [白宫涉巴以与俄乌冲突发言对比鲜明](https://so.toutiao.com/search?keyword=白宫涉巴以与俄乌冲突发言对比鲜明)
+1. [海关查获金条72块 价值约4000万](https://so.toutiao.com/search?keyword=海关查获金条72块+价值约4000万)
+1. [中方回应缅方一边境城镇失去控制](https://so.toutiao.com/search?keyword=中方回应缅方一边境城镇失去控制)
+1. [央媒：村民抢药材通报淡化违法本质](https://so.toutiao.com/search?keyword=央媒：村民抢药材通报淡化违法本质)
+1. [美以涉俄为由宣布新制裁 含3家中企](https://so.toutiao.com/search?keyword=美以涉俄为由宣布新制裁+含3家中企)
+1. [伊拉克民兵对美以军事目标发动袭击](https://so.toutiao.com/search?keyword=伊拉克民兵对美以军事目标发动袭击)
+1. [面对压力 拜登对以色列喊“暂停”](https://so.toutiao.com/search?keyword=面对压力+拜登对以色列喊“暂停”)
+1. [桐乡被榔头殴打女子为律师](https://so.toutiao.com/search?keyword=桐乡被榔头殴打女子为律师)
+1. [天津市委巡视组回应助学金事件](https://so.toutiao.com/search?keyword=天津市委巡视组回应助学金事件)
+1. [媒体评哄抢药材：法不责众不是借口](https://so.toutiao.com/search?keyword=媒体评哄抢药材：法不责众不是借口)
+1. [威海两游园落叶缓扫留住秋日之美](https://so.toutiao.com/search?keyword=威海两游园落叶缓扫留住秋日之美)
+1. [赖岳谦谈菲律宾军舰非法闯入黄岩岛](https://so.toutiao.com/search?keyword=赖岳谦谈菲律宾军舰非法闯入黄岩岛)
+1. [河南被哄抢药材基本追回 损失约3万](https://so.toutiao.com/search?keyword=河南被哄抢药材基本追回+损失约3万)
+1. [中方：应坚持两国方案解决巴以问题](https://so.toutiao.com/search?keyword=中方：应坚持两国方案解决巴以问题)
+1. [男子在药店和街头暴打女子](https://so.toutiao.com/search?keyword=男子在药店和街头暴打女子)
+1. [支原体肺炎爆发和新冠有关系吗](https://so.toutiao.com/search?keyword=支原体肺炎爆发和新冠有关系吗)
+1. [CBS记者：文班是有史以来最强新秀](https://so.toutiao.com/search?keyword=CBS记者：文班是有史以来最强新秀)
+1. [我国应对气候变化取得积极进展](https://so.toutiao.com/search?keyword=我国应对气候变化取得积极进展)
+1. [21岁女孩因吸食依托咪酯主动自首](https://so.toutiao.com/search?keyword=21岁女孩因吸食依托咪酯主动自首)
 1. [官方辟谣“女孩地铁站遇人贩子”](https://so.toutiao.com/search?keyword=官方辟谣“女孩地铁站遇人贩子”)
 1. [本轮巴以冲突已致上万人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突已致上万人死亡)
-1. [以军称地面部队已包围加沙城](https://so.toutiao.com/search?keyword=以军称地面部队已包围加沙城)
 1. [媒体评贫困生助学金名额被挤](https://so.toutiao.com/search?keyword=媒体评贫困生助学金名额被挤)
-1. [联合国机构呼吁巴以立即实现停火](https://so.toutiao.com/search?keyword=联合国机构呼吁巴以立即实现停火)
-1. [美媒：拜登等人私下警告以色列](https://so.toutiao.com/search?keyword=美媒：拜登等人私下警告以色列)
-1. [电影《我本是高山》发特辑](https://so.toutiao.com/search?keyword=电影《我本是高山》发特辑)
-1. [揭秘巴以冲突背后的激烈斗争](https://so.toutiao.com/search?keyword=揭秘巴以冲突背后的激烈斗争)
-1. [知名记者曝以军对加沙战术](https://so.toutiao.com/search?keyword=知名记者曝以军对加沙战术)
-1. [淄博36条道路实行“落叶缓扫”](https://so.toutiao.com/search?keyword=淄博36条道路实行“落叶缓扫”)
-1. [巴以冲突致237起针对医疗系统袭击](https://so.toutiao.com/search?keyword=巴以冲突致237起针对医疗系统袭击)
-1. [面对压力 拜登对以色列喊“暂停”](https://so.toutiao.com/search?keyword=面对压力+拜登对以色列喊“暂停”)
-1. [部分外国人获准离开加沙](https://so.toutiao.com/search?keyword=部分外国人获准离开加沙)
-1. [专家：巴以冲突给中东经济蒙上阴影](https://so.toutiao.com/search?keyword=专家：巴以冲突给中东经济蒙上阴影)
 1. [哈马斯冲出地道将炸弹贴以军坦克上](https://so.toutiao.com/search?keyword=哈马斯冲出地道将炸弹贴以军坦克上)
 1. [向太辟谣李连杰去世](https://so.toutiao.com/search?keyword=向太辟谣李连杰去世)
-1. [以军与巴勒斯坦民众冲突致多人死亡](https://so.toutiao.com/search?keyword=以军与巴勒斯坦民众冲突致多人死亡)
 1. [马斯克：人工智能应配备本地开关](https://so.toutiao.com/search?keyword=马斯克：人工智能应配备本地开关)
-1. [河南被哄抢药材基本追回 损失约3万](https://so.toutiao.com/search?keyword=河南被哄抢药材基本追回+损失约3万)
 1. [巴称2日有256名平民在以空袭中丧生](https://so.toutiao.com/search?keyword=巴称2日有256名平民在以空袭中丧生)
-1. [以南部遭火箭弹袭击未造成人员伤亡](https://so.toutiao.com/search?keyword=以南部遭火箭弹袭击未造成人员伤亡)
 1. [教委回应学生举报助学金评定不公](https://so.toutiao.com/search?keyword=教委回应学生举报助学金评定不公)
-1. [白宫涉巴以与俄乌冲突发言对比鲜明](https://so.toutiao.com/search?keyword=白宫涉巴以与俄乌冲突发言对比鲜明)
 1. [联大通过决议敦促美终止对古巴封锁](https://so.toutiao.com/search?keyword=联大通过决议敦促美终止对古巴封锁)
-1. [央媒：村民抢药材通报淡化违法本质](https://so.toutiao.com/search?keyword=央媒：村民抢药材通报淡化违法本质)
-1. [中方：应坚持两国方案解决巴以问题](https://so.toutiao.com/search?keyword=中方：应坚持两国方案解决巴以问题)
 1. [布克：文班亚马天赋难以置信](https://so.toutiao.com/search?keyword=布克：文班亚马天赋难以置信)
 1. [地图显示加沙地带遭严重破坏](https://so.toutiao.com/search?keyword=地图显示加沙地带遭严重破坏)
-1. [美以讨论以色列在加沙最新行动情况](https://so.toutiao.com/search?keyword=美以讨论以色列在加沙最新行动情况)
-1. [联合国越来越不起作用了吗](https://so.toutiao.com/search?keyword=联合国越来越不起作用了吗)
-1. [黎真主党称同时打击以军19个阵地](https://so.toutiao.com/search?keyword=黎真主党称同时打击以军19个阵地)
 1. [文班亚马38+10 马刺双杀太阳](https://so.toutiao.com/search?keyword=文班亚马38+10+马刺双杀太阳)
-1. [桐乡被榔头殴打女子为律师](https://so.toutiao.com/search?keyword=桐乡被榔头殴打女子为律师)
-1. [以方称一支伊朗民兵抵达黎巴嫩南部](https://so.toutiao.com/search?keyword=以方称一支伊朗民兵抵达黎巴嫩南部)
-1. [杨坤演出结束后被打？假的](https://so.toutiao.com/search?keyword=杨坤演出结束后被打？假的)
-1. [中方回应缅方一边境城镇失去控制](https://so.toutiao.com/search?keyword=中方回应缅方一边境城镇失去控制)
-1. [黎真主党50名成员在黎以冲突中死亡](https://so.toutiao.com/search?keyword=黎真主党50名成员在黎以冲突中死亡)
 1. [俄媒：以军正采取外科手术式的行动](https://so.toutiao.com/search?keyword=俄媒：以军正采取外科手术式的行动)
 1. [助学金事件当事人称已搬离宿舍](https://so.toutiao.com/search?keyword=助学金事件当事人称已搬离宿舍)
 1. [三轮车转弯速度过快撞上汽车](https://so.toutiao.com/search?keyword=三轮车转弯速度过快撞上汽车)
@@ -60,24 +79,18 @@
 1. [伪造身份敛财贪官再添一人](https://so.toutiao.com/search?keyword=伪造身份敛财贪官再添一人)
 1. [老客户吐槽移动公司“偷梁换柱”](https://so.toutiao.com/search?keyword=老客户吐槽移动公司“偷梁换柱”)
 1. [波波维奇谈文班砍38分：他很全面](https://so.toutiao.com/search?keyword=波波维奇谈文班砍38分：他很全面)
-1. [海清和张桂梅校长的首次见面](https://so.toutiao.com/search?keyword=海清和张桂梅校长的首次见面)
 1. [以军袭击多个黎巴嫩真主党军事目标](https://so.toutiao.com/search?keyword=以军袭击多个黎巴嫩真主党军事目标)
 1. [联合国秘书长谴责袭击加沙难民营](https://so.toutiao.com/search?keyword=联合国秘书长谴责袭击加沙难民营)
 1. [102辆运载援助物资的卡车进入加沙](https://so.toutiao.com/search?keyword=102辆运载援助物资的卡车进入加沙)
 1. [侯友宜再喊话柯文哲：一同放下自己](https://so.toutiao.com/search?keyword=侯友宜再喊话柯文哲：一同放下自己)
-1. [伊拉克民兵对美以军事目标发动袭击](https://so.toutiao.com/search?keyword=伊拉克民兵对美以军事目标发动袭击)
-1. [医院回应新生儿后脑勺被护士烫伤](https://so.toutiao.com/search?keyword=医院回应新生儿后脑勺被护士烫伤)
 1. [老爸调侃女儿放学玩秋千被当场反击](https://so.toutiao.com/search?keyword=老爸调侃女儿放学玩秋千被当场反击)
 1. [苏群：文班接受了又一次淬炼](https://so.toutiao.com/search?keyword=苏群：文班接受了又一次淬炼)
 1. [拜登：将否决对以色列军援议案](https://so.toutiao.com/search?keyword=拜登：将否决对以色列军援议案)
-1. [德国副总理：赞扬哈马斯属犯罪行为](https://so.toutiao.com/search?keyword=德国副总理：赞扬哈马斯属犯罪行为)
 1. [李佳琦直播间疑为冲销量未付先送](https://so.toutiao.com/search?keyword=李佳琦直播间疑为冲销量未付先送)
 1. [女儿不能吃东西 爸爸用针管喂流食](https://so.toutiao.com/search?keyword=女儿不能吃东西+爸爸用针管喂流食)
 1. [支原体肺炎不宜自行服用“三件套”](https://so.toutiao.com/search?keyword=支原体肺炎不宜自行服用“三件套”)
-1. [中央气象台：北方正受冷空气影响](https://so.toutiao.com/search?keyword=中央气象台：北方正受冷空气影响)
 1. [中美将举行军控和防扩散磋商](https://so.toutiao.com/search?keyword=中美将举行军控和防扩散磋商)
 1. [李登辉被日出版社列为中国历史人物](https://so.toutiao.com/search?keyword=李登辉被日出版社列为中国历史人物)
-1. [也门胡塞武装发布向以发射导弹画面](https://so.toutiao.com/search?keyword=也门胡塞武装发布向以发射导弹画面)
 1. [产妇深夜大出血8000毫升被救回](https://so.toutiao.com/search?keyword=产妇深夜大出血8000毫升被救回)
 1. [巴勒斯坦一记者及其11名亲属遇难](https://so.toutiao.com/search?keyword=巴勒斯坦一记者及其11名亲属遇难)
 1. [以军空袭已导致超3500名儿童死亡](https://so.toutiao.com/search?keyword=以军空袭已导致超3500名儿童死亡)
@@ -121,7 +134,6 @@
 1. [6名中国公民在菲律宾遭绑架](https://so.toutiao.com/search?keyword=6名中国公民在菲律宾遭绑架)
 1. [俄撤销批准《全面禁止核试验条约》](https://so.toutiao.com/search?keyword=俄撤销批准《全面禁止核试验条约》)
 1. [旅游大巴撞上悬崖边护栏8人受伤](https://so.toutiao.com/search?keyword=旅游大巴撞上悬崖边护栏8人受伤)
-1. [媒体评哄抢药材：法不责众不是借口](https://so.toutiao.com/search?keyword=媒体评哄抢药材：法不责众不是借口)
 1. [为什么说美国在进行芯片内战](https://so.toutiao.com/search?keyword=为什么说美国在进行芯片内战)
 1. [缅北混战幕后“操盘手”是谁](https://so.toutiao.com/search?keyword=缅北混战幕后“操盘手”是谁)
 1. [专访缅甸果敢同盟军发言人：铲除电诈](https://so.toutiao.com/search?keyword=专访缅甸果敢同盟军发言人：铲除电诈)
