--- a/archives/toutiao-search/2023-11-03.md
+++ b/archives/toutiao-search/2023-11-03.md
@@ -1,66 +1,79 @@
 # 2023-11-03
 
-共 208 条
+共 216 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Nov 03 2023 18:00:52 GMT+0800 (China Standard Time) -->
-1. [淄博36条道路实行“落叶缓扫”](https://so.toutiao.com/search?keyword=淄博36条道路实行“落叶缓扫”)
-1. [天津市委巡视组回应助学金事件](https://so.toutiao.com/search?keyword=天津市委巡视组回应助学金事件)
-1. [二十连丰！](https://so.toutiao.com/search?keyword=二十连丰！)
+<!-- 最后更新时间 Fri Nov 03 2023 19:00:41 GMT+0800 (China Standard Time) -->
 1. [市民去住建局办事借用厕所遭拒](https://so.toutiao.com/search?keyword=市民去住建局办事借用厕所遭拒)
-1. [支原体肺炎爆发和新冠有关系吗](https://so.toutiao.com/search?keyword=支原体肺炎爆发和新冠有关系吗)
-1. [加3万彩礼选择退婚事件有何启示](https://so.toutiao.com/search?keyword=加3万彩礼选择退婚事件有何启示)
-1. [助学金事件当事人称已搬离宿舍](https://so.toutiao.com/search?keyword=助学金事件当事人称已搬离宿舍)
-1. [烂尾楼让业主补差价才能交付合理吗](https://so.toutiao.com/search?keyword=烂尾楼让业主补差价才能交付合理吗)
-1. [联合国越来越不起作用了吗](https://so.toutiao.com/search?keyword=联合国越来越不起作用了吗)
-1. [警方辟谣长沙岳麓山有人被拐去缅甸](https://so.toutiao.com/search?keyword=警方辟谣长沙岳麓山有人被拐去缅甸)
-1. [知名记者曝以军对加沙战术](https://so.toutiao.com/search?keyword=知名记者曝以军对加沙战术)
-1. [面对压力 拜登对以色列喊“暂停”](https://so.toutiao.com/search?keyword=面对压力+拜登对以色列喊“暂停”)
-1. [向太辟谣李连杰去世](https://so.toutiao.com/search?keyword=向太辟谣李连杰去世)
-1. [部分外国人获准离开加沙](https://so.toutiao.com/search?keyword=部分外国人获准离开加沙)
-1. [哈马斯冲出地道将炸弹贴以军坦克上](https://so.toutiao.com/search?keyword=哈马斯冲出地道将炸弹贴以军坦克上)
-1. [电影《我本是高山》发特辑](https://so.toutiao.com/search?keyword=电影《我本是高山》发特辑)
-1. [曾光解读冬季呼吸道传染病如何应对](https://so.toutiao.com/search?keyword=曾光解读冬季呼吸道传染病如何应对)
-1. [成都男子地铁被诬告偷拍案开庭](https://so.toutiao.com/search?keyword=成都男子地铁被诬告偷拍案开庭)
-1. [黎真主党50名成员在黎以冲突中死亡](https://so.toutiao.com/search?keyword=黎真主党50名成员在黎以冲突中死亡)
-1. [文班亚马38+10 马刺双杀太阳](https://so.toutiao.com/search?keyword=文班亚马38+10+马刺双杀太阳)
-1. [联合国机构呼吁巴以立即实现停火](https://so.toutiao.com/search?keyword=联合国机构呼吁巴以立即实现停火)
+1. [奥迪轿车恶意别车不料被撞进绿化带](https://so.toutiao.com/search?keyword=奥迪轿车恶意别车不料被撞进绿化带)
+1. [二十连丰！](https://so.toutiao.com/search?keyword=二十连丰！)
 1. [天津助学金事件三大争议点](https://so.toutiao.com/search?keyword=天津助学金事件三大争议点)
-1. [波波维奇谈文班砍38分：他很全面](https://so.toutiao.com/search?keyword=波波维奇谈文班砍38分：他很全面)
-1. [揭秘巴以冲突背后的激烈斗争](https://so.toutiao.com/search?keyword=揭秘巴以冲突背后的激烈斗争)
-1. [多地进入呼吸道传染病高发季节](https://so.toutiao.com/search?keyword=多地进入呼吸道传染病高发季节)
-1. [助学金当事人向网友咨询便宜过夜法](https://so.toutiao.com/search?keyword=助学金当事人向网友咨询便宜过夜法)
-1. [白宫涉巴以与俄乌冲突发言对比鲜明](https://so.toutiao.com/search?keyword=白宫涉巴以与俄乌冲突发言对比鲜明)
-1. [74名拥有双重国籍美国人从加沙撤离](https://so.toutiao.com/search?keyword=74名拥有双重国籍美国人从加沙撤离)
-1. [央媒：村民抢药材通报淡化违法本质](https://so.toutiao.com/search?keyword=央媒：村民抢药材通报淡化违法本质)
+1. [女律师遭被告榔头追击 律协介入](https://so.toutiao.com/search?keyword=女律师遭被告榔头追击+律协介入)
+1. [赖岳谦谈菲律宾军舰非法闯入黄岩岛](https://so.toutiao.com/search?keyword=赖岳谦谈菲律宾军舰非法闯入黄岩岛)
+1. [联合国越来越不起作用了吗](https://so.toutiao.com/search?keyword=联合国越来越不起作用了吗)
+1. [央媒：高校助学金不能是笔糊涂账](https://so.toutiao.com/search?keyword=央媒：高校助学金不能是笔糊涂账)
+1. [淄博36条道路实行“落叶缓扫”](https://so.toutiao.com/search?keyword=淄博36条道路实行“落叶缓扫”)
+1. [警方辟谣长沙岳麓山有人被拐去缅甸](https://so.toutiao.com/search?keyword=警方辟谣长沙岳麓山有人被拐去缅甸)
+1. [黎真主党称同时打击以军19个阵地](https://so.toutiao.com/search?keyword=黎真主党称同时打击以军19个阵地)
+1. [面对压力 拜登对以色列喊“暂停”](https://so.toutiao.com/search?keyword=面对压力+拜登对以色列喊“暂停”)
+1. [以军袭击加沙医院 数名避难者受伤](https://so.toutiao.com/search?keyword=以军袭击加沙医院+数名避难者受伤)
 1. [多国批美西方在巴以冲突上存在双标](https://so.toutiao.com/search?keyword=多国批美西方在巴以冲突上存在双标)
-1. [以军炮击导致黎巴嫩一村庄4人死亡](https://so.toutiao.com/search?keyword=以军炮击导致黎巴嫩一村庄4人死亡)
+1. [美媒：拜登等人私下警告以色列](https://so.toutiao.com/search?keyword=美媒：拜登等人私下警告以色列)
 1. [以南部遭火箭弹袭击未造成人员伤亡](https://so.toutiao.com/search?keyword=以南部遭火箭弹袭击未造成人员伤亡)
 1. [媒体：当务之急是巴以停火止战](https://so.toutiao.com/search?keyword=媒体：当务之急是巴以停火止战)
-1. [李登辉被日出版社列为中国历史人物](https://so.toutiao.com/search?keyword=李登辉被日出版社列为中国历史人物)
-1. [河南被哄抢药材基本追回 损失约3万](https://so.toutiao.com/search?keyword=河南被哄抢药材基本追回+损失约3万)
+1. [部分外国人获准离开加沙](https://so.toutiao.com/search?keyword=部分外国人获准离开加沙)
+1. [中国股市为何15年3000点徘徊不前](https://so.toutiao.com/search?keyword=中国股市为何15年3000点徘徊不前)
+1. [哈马斯冲出地道将炸弹贴以军坦克上](https://so.toutiao.com/search?keyword=哈马斯冲出地道将炸弹贴以军坦克上)
 1. [专家：巴以冲突给中东经济蒙上阴影](https://so.toutiao.com/search?keyword=专家：巴以冲突给中东经济蒙上阴影)
-1. [以军与巴勒斯坦民众冲突致多人死亡](https://so.toutiao.com/search?keyword=以军与巴勒斯坦民众冲突致多人死亡)
-1. [媒体评哄抢药材：法不责众不是借口](https://so.toutiao.com/search?keyword=媒体评哄抢药材：法不责众不是借口)
-1. [以军袭击加沙医院 数名避难者受伤](https://so.toutiao.com/search?keyword=以军袭击加沙医院+数名避难者受伤)
-1. [警方通报男子当街持械袭击女子](https://so.toutiao.com/search?keyword=警方通报男子当街持械袭击女子)
-1. [CBS记者：文班是有史以来最强新秀](https://so.toutiao.com/search?keyword=CBS记者：文班是有史以来最强新秀)
+1. [向太辟谣李连杰去世](https://so.toutiao.com/search?keyword=向太辟谣李连杰去世)
+1. [举报助学金评定不公学生：有人疑作弊](https://so.toutiao.com/search?keyword=举报助学金评定不公学生：有人疑作弊)
+1. [黎真主党50名成员在黎以冲突中死亡](https://so.toutiao.com/search?keyword=黎真主党50名成员在黎以冲突中死亡)
+1. [联合国机构呼吁巴以立即实现停火](https://so.toutiao.com/search?keyword=联合国机构呼吁巴以立即实现停火)
+1. [助学金当事人向网友咨询便宜过夜法](https://so.toutiao.com/search?keyword=助学金当事人向网友咨询便宜过夜法)
+1. [马斯克：人工智能应配备本地开关](https://so.toutiao.com/search?keyword=马斯克：人工智能应配备本地开关)
+1. [以军炮击导致黎巴嫩一村庄4人死亡](https://so.toutiao.com/search?keyword=以军炮击导致黎巴嫩一村庄4人死亡)
+1. [央媒：村民抢药材通报淡化违法本质](https://so.toutiao.com/search?keyword=央媒：村民抢药材通报淡化违法本质)
+1. [联合国一机构72名员工死于巴以冲突](https://so.toutiao.com/search?keyword=联合国一机构72名员工死于巴以冲突)
 1. [以军称地面部队已包围加沙城](https://so.toutiao.com/search?keyword=以军称地面部队已包围加沙城)
+1. [吴子嘉批柯文哲搞过头：支持者跑了](https://so.toutiao.com/search?keyword=吴子嘉批柯文哲搞过头：支持者跑了)
 1. [巴以冲突致237起针对医疗系统袭击](https://so.toutiao.com/search?keyword=巴以冲突致237起针对医疗系统袭击)
-1. [对话因高彩礼退婚辞职旅行当事人](https://so.toutiao.com/search?keyword=对话因高彩礼退婚辞职旅行当事人)
+1. [中美重启军控谈判 有何新风向](https://so.toutiao.com/search?keyword=中美重启军控谈判+有何新风向)
+1. [沈莹任江苏省委副书记](https://so.toutiao.com/search?keyword=沈莹任江苏省委副书记)
+1. [河南被哄抢药材基本追回 损失约3万](https://so.toutiao.com/search?keyword=河南被哄抢药材基本追回+损失约3万)
+1. [助学金事件男生让网友别转钱了](https://so.toutiao.com/search?keyword=助学金事件男生让网友别转钱了)
+1. [杨坤演出结束后被打？假的](https://so.toutiao.com/search?keyword=杨坤演出结束后被打？假的)
+1. [揭秘巴以冲突背后的激烈斗争](https://so.toutiao.com/search?keyword=揭秘巴以冲突背后的激烈斗争)
+1. [巴方称超1900名巴勒斯坦人被以扣押](https://so.toutiao.com/search?keyword=巴方称超1900名巴勒斯坦人被以扣押)
 1. [桐乡被榔头殴打女子为律师](https://so.toutiao.com/search?keyword=桐乡被榔头殴打女子为律师)
-1. [赖岳谦谈菲律宾军舰非法闯入黄岩岛](https://so.toutiao.com/search?keyword=赖岳谦谈菲律宾军舰非法闯入黄岩岛)
+1. [曾光解读冬季呼吸道传染病如何应对](https://so.toutiao.com/search?keyword=曾光解读冬季呼吸道传染病如何应对)
+1. [以军与巴勒斯坦民众冲突致多人死亡](https://so.toutiao.com/search?keyword=以军与巴勒斯坦民众冲突致多人死亡)
+1. [知名记者曝以军对加沙战术](https://so.toutiao.com/search?keyword=知名记者曝以军对加沙战术)
+1. [男子药店暴打女子 警方：两人是情侣](https://so.toutiao.com/search?keyword=男子药店暴打女子+警方：两人是情侣)
+1. [警方通报男子当街持械袭击女子](https://so.toutiao.com/search?keyword=警方通报男子当街持械袭击女子)
+1. [白宫涉巴以与俄乌冲突发言对比鲜明](https://so.toutiao.com/search?keyword=白宫涉巴以与俄乌冲突发言对比鲜明)
+1. [CBS记者：文班是有史以来最强新秀](https://so.toutiao.com/search?keyword=CBS记者：文班是有史以来最强新秀)
+1. [媒体评哄抢药材：法不责众不是借口](https://so.toutiao.com/search?keyword=媒体评哄抢药材：法不责众不是借口)
+1. [助学金事件当事人称已搬离宿舍](https://so.toutiao.com/search?keyword=助学金事件当事人称已搬离宿舍)
+1. [天津市委巡视组回应助学金事件](https://so.toutiao.com/search?keyword=天津市委巡视组回应助学金事件)
+1. [支原体肺炎爆发和新冠有关系吗](https://so.toutiao.com/search?keyword=支原体肺炎爆发和新冠有关系吗)
+1. [加3万彩礼选择退婚事件有何启示](https://so.toutiao.com/search?keyword=加3万彩礼选择退婚事件有何启示)
+1. [烂尾楼让业主补差价才能交付合理吗](https://so.toutiao.com/search?keyword=烂尾楼让业主补差价才能交付合理吗)
+1. [电影《我本是高山》发特辑](https://so.toutiao.com/search?keyword=电影《我本是高山》发特辑)
+1. [成都男子地铁被诬告偷拍案开庭](https://so.toutiao.com/search?keyword=成都男子地铁被诬告偷拍案开庭)
+1. [文班亚马38+10 马刺双杀太阳](https://so.toutiao.com/search?keyword=文班亚马38+10+马刺双杀太阳)
+1. [波波维奇谈文班砍38分：他很全面](https://so.toutiao.com/search?keyword=波波维奇谈文班砍38分：他很全面)
+1. [多地进入呼吸道传染病高发季节](https://so.toutiao.com/search?keyword=多地进入呼吸道传染病高发季节)
+1. [74名拥有双重国籍美国人从加沙撤离](https://so.toutiao.com/search?keyword=74名拥有双重国籍美国人从加沙撤离)
+1. [李登辉被日出版社列为中国历史人物](https://so.toutiao.com/search?keyword=李登辉被日出版社列为中国历史人物)
+1. [对话因高彩礼退婚辞职旅行当事人](https://so.toutiao.com/search?keyword=对话因高彩礼退婚辞职旅行当事人)
 1. [伊拉克民兵对美以军事目标发动袭击](https://so.toutiao.com/search?keyword=伊拉克民兵对美以军事目标发动袭击)
-1. [美媒：拜登等人私下警告以色列](https://so.toutiao.com/search?keyword=美媒：拜登等人私下警告以色列)
 1. [支原体感染大爆发或许是假象](https://so.toutiao.com/search?keyword=支原体感染大爆发或许是假象)
 1. [海清和张桂梅校长的首次见面](https://so.toutiao.com/search?keyword=海清和张桂梅校长的首次见面)
 1. [劳荣枝案死刑复核进展如何](https://so.toutiao.com/search?keyword=劳荣枝案死刑复核进展如何)
 1. [医院回应新生儿后脑勺被护士烫伤](https://so.toutiao.com/search?keyword=医院回应新生儿后脑勺被护士烫伤)
 1. [马斯克：AI比最聪明的人聪明得多](https://so.toutiao.com/search?keyword=马斯克：AI比最聪明的人聪明得多)
-1. [杨坤演出结束后被打？假的](https://so.toutiao.com/search?keyword=杨坤演出结束后被打？假的)
 1. [美穆斯林选民：不会再把票投给拜登](https://so.toutiao.com/search?keyword=美穆斯林选民：不会再把票投给拜登)
 1. [美以讨论以色列在加沙最新行动情况](https://so.toutiao.com/search?keyword=美以讨论以色列在加沙最新行动情况)
-1. [黎真主党称同时打击以军19个阵地](https://so.toutiao.com/search?keyword=黎真主党称同时打击以军19个阵地)
 1. [也门胡塞武装发布向以发射导弹画面](https://so.toutiao.com/search?keyword=也门胡塞武装发布向以发射导弹画面)
 1. [德国副总理：赞扬哈马斯属犯罪行为](https://so.toutiao.com/search?keyword=德国副总理：赞扬哈马斯属犯罪行为)
 1. [以方称一支伊朗民兵抵达黎巴嫩南部](https://so.toutiao.com/search?keyword=以方称一支伊朗民兵抵达黎巴嫩南部)
@@ -76,7 +89,6 @@
 1. [官方辟谣“女孩地铁站遇人贩子”](https://so.toutiao.com/search?keyword=官方辟谣“女孩地铁站遇人贩子”)
 1. [本轮巴以冲突已致上万人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突已致上万人死亡)
 1. [媒体评贫困生助学金名额被挤](https://so.toutiao.com/search?keyword=媒体评贫困生助学金名额被挤)
-1. [马斯克：人工智能应配备本地开关](https://so.toutiao.com/search?keyword=马斯克：人工智能应配备本地开关)
 1. [巴称2日有256名平民在以空袭中丧生](https://so.toutiao.com/search?keyword=巴称2日有256名平民在以空袭中丧生)
 1. [教委回应学生举报助学金评定不公](https://so.toutiao.com/search?keyword=教委回应学生举报助学金评定不公)
 1. [联大通过决议敦促美终止对古巴封锁](https://so.toutiao.com/search?keyword=联大通过决议敦促美终止对古巴封锁)
@@ -87,7 +99,6 @@
 1. [拜登政府敦促国会：援乌不能停](https://so.toutiao.com/search?keyword=拜登政府敦促国会：援乌不能停)
 1. [李克强同志生平](https://so.toutiao.com/search?keyword=李克强同志生平)
 1. [李克强同志生平照片](https://so.toutiao.com/search?keyword=李克强同志生平照片)
-1. [吴子嘉批柯文哲搞过头：支持者跑了](https://so.toutiao.com/search?keyword=吴子嘉批柯文哲搞过头：支持者跑了)
 1. [伪造身份敛财贪官再添一人](https://so.toutiao.com/search?keyword=伪造身份敛财贪官再添一人)
 1. [老客户吐槽移动公司“偷梁换柱”](https://so.toutiao.com/search?keyword=老客户吐槽移动公司“偷梁换柱”)
 1. [以军袭击多个黎巴嫩真主党军事目标](https://so.toutiao.com/search?keyword=以军袭击多个黎巴嫩真主党军事目标)
@@ -105,9 +116,7 @@
 1. [巴勒斯坦一记者及其11名亲属遇难](https://so.toutiao.com/search?keyword=巴勒斯坦一记者及其11名亲属遇难)
 1. [以军空袭已导致超3500名儿童死亡](https://so.toutiao.com/search?keyword=以军空袭已导致超3500名儿童死亡)
 1. [黎向以发射数枚迫击炮 以炮击回应](https://so.toutiao.com/search?keyword=黎向以发射数枚迫击炮+以炮击回应)
-1. [举报助学金评定不公学生：有人疑作弊](https://so.toutiao.com/search?keyword=举报助学金评定不公学生：有人疑作弊)
 1. [快船官方发布哈登定妆照](https://so.toutiao.com/search?keyword=快船官方发布哈登定妆照)
-1. [中国股市为何15年3000点徘徊不前](https://so.toutiao.com/search?keyword=中国股市为何15年3000点徘徊不前)
 1. [警员枪支被盗 警方24小时抓获嫌犯](https://so.toutiao.com/search?keyword=警员枪支被盗+警方24小时抓获嫌犯)
 1. [巴方称以向加沙医院附近发射白磷弹](https://so.toutiao.com/search?keyword=巴方称以向加沙医院附近发射白磷弹)
 1. [巴以冲突一旦战争外溢意味着啥](https://so.toutiao.com/search?keyword=巴以冲突一旦战争外溢意味着啥)
@@ -128,7 +137,6 @@
 1. [美众议院投票通过对以色列援助法案](https://so.toutiao.com/search?keyword=美众议院投票通过对以色列援助法案)
 1. [男子因高彩礼退婚拿16.8万辞职旅行](https://so.toutiao.com/search?keyword=男子因高彩礼退婚拿16.8万辞职旅行)
 1. [专家谈拜登提名坎贝尔出任副国务卿](https://so.toutiao.com/search?keyword=专家谈拜登提名坎贝尔出任副国务卿)
-1. [助学金事件男生让网友别转钱了](https://so.toutiao.com/search?keyword=助学金事件男生让网友别转钱了)
 1. [中方：美对古巴单边强制措施须终止](https://so.toutiao.com/search?keyword=中方：美对古巴单边强制措施须终止)
 1. [为何今年肺炎支原体感染来势汹汹](https://so.toutiao.com/search?keyword=为何今年肺炎支原体感染来势汹汹)
 1. [拜登提名中国问题专家出任副国务卿](https://so.toutiao.com/search?keyword=拜登提名中国问题专家出任副国务卿)
